--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/gkatsev/chrome-debugger/issues"
+  },
+  "dependencies": {
+    "ws": "~0.4.27"
   }
 }
